# communication_netstack

./: CMakeLists.txt  READEME.md  README.en.md  README.md  README_zh.md  netstack_config.gni  ohos.build
frameworks/cj/http/: BUILD.gn
frameworks/js/builtin/: .clang-format  CMakeLists.txt  fetch_module.cpp  fetch_module.h
frameworks/js/napi/: BUILD.gn
frameworks/native/http_interceptor/: http_interceptor_mgr.cpp
frameworks/native/net_ssl/: net_ssl_verify_cert.cpp
http/: README.md  netmanager_config.gni  ohos.build
http/frameworks/innerkitsimpl/netconnmanager/src/: inet_addr.cpp  net_conn_manager.cpp  net_link_info.cpp  net_provider_info.cpp  net_specifier.cpp  route.cpp
http/frameworks/js/napi/: BUILD.gn
http/frameworks/js/napi/http/include/: http_napi.h  http_request.h  http_request_options_context.h  http_response.h  napi_util.h
http/frameworks/js/napi/http/src/: http_napi.cpp  napi_util.cpp
http/frameworks/js/napi/socket/include/: extra_options_base.h  netaddress.h  socket_napi.h  socket_remote_info.h  tcp_connect_options.h  udp_event_list.h
http/frameworks/js/napi/socket/src/: socket_napi.cpp  udp_socket.cpp
http/frameworks/js/napi/websocket/src/: websocket_napi.cpp
http/interfaces/innerkits/native/netconnmanager/: BUILD.gn
http/interfaces/innerkits/native/netconnmanager/include/: net_conn_constants.h  net_conn_manager.h  net_link_info.h  net_provider_info.h  net_specifier.h  route.h
http/interfaces/kits/js/: @ohos.net.socket.d.ts  basic.d.ts
http/sa_profile/: BUILD.gn
http/services/etc/init/: BUILD.gn  netmanager_standard.cfg
http/services/netconnmanager/: BUILD.gn
http/services/netconnmanager/include/: net_conn_service.h  net_conn_types.h  net_id_manager.h  net_provider.h  net_service.h  netd_controller.h  network.h
http/services/netconnmanager/include/ipc/: i_net_conn_service.h  net_conn_service_proxy.h  net_conn_service_stub.h
http/services/netconnmanager/include/net_controller/: i_net_controller.h  net_controller_factory.h  telephony_controller.h
http/services/netconnmanager/src/: net_conn_service.cpp  net_id_manager.cpp  net_provider.cpp  net_service.cpp  netd_controller.cpp  network.cpp
http/services/netconnmanager/src/ipc/: net_conn_service_proxy.cpp  net_conn_service_stub.cpp
http/services/netconnmanager/src/net_controller/: net_controller_factory.cpp  telephony_controller.cpp
http/services/netconnmanager/test/: BUILD.gn
http/services/netconnmanager/test/local_test/: BUILD.gn  test.cpp
http/services/netconnmanager/test/unittest/net_conn_manager_test/: BUILD.gn  net_conn_manager_test.cpp
http/services/netmanagernative/: BUILD.gn
http/services/netmanagernative/common/huawei_secure_c/include/: securec.h  securectype.h
http/services/netmanagernative/common/huawei_secure_c/src/: fscanf_s.c  fwscanf_s.c  gets_s.c  input.inl  memcpy_s.c  memmove_s.c  memset_s.c  output.inl  scanf_s.c  secinput.h  securecutil.c  securecutil.h  secureinput_a.c  secureinput_w.c  secureprintoutput.h  secureprintoutput_a.c  secureprintoutput_w.c  snprintf_s.c  sprintf_s.c  sscanf_s.c  strcat_s.c  strcpy_s.c  strncat_s.c  strncpy_s.c  strtok_s.c  swprintf_s.c  swscanf_s.c  vfscanf_s.c  vfwscanf_s.c  vscanf_s.c  vsnprintf_s.c  vsprintf_s.c  vsscanf_s.c  vswprintf_s.c  vswscanf_s.c  vwscanf_s.c  wcscat_s.c  wcscpy_s.c  wcsncat_s.c  wcsncpy_s.c  (+4 more)
http/services/netmanagernative/common/include/: bitcast.h  blocking_queue.h  error_code.h  interface_utils.h  job.h  logger.h  net_utils.h  raii.h  rwlock.h  server_socket.h  server_template.h  socket_base.h  thread_pool.h  utils.h  warning_disable.h
http/services/netmanagernative/common/src/: error_code.cpp  interface_utils.cpp  job.cpp  logger.cpp  net_utils.cpp  rwlock.cpp  server_socket.cpp  server_template.cpp  socket_base.cpp  thread_pool.cpp  utils.cpp
http/services/netmanagernative/net_mgr_native/client/include/: dnsresolv_client.h  fwmark_client.h
http/services/netmanagernative/net_mgr_native/client/src/: dnsresolv_client.cpp  fwmark_client.cpp
http/services/netmanagernative/net_mgr_native/include/: dnsresolv.h  dnsresolv_cache.h  dnsresolv_controller.h  dnsresolv_service.h  event_reporter.h  fwmark.h  fwmark_command.h  fwmark_server.h  get_addr_info.h  interface_controller.h  iptables_process.h  native_netd_service.h  netlink_event.h  netlink_handler.h  netlink_listener.h  netlink_manager.h  netlink_msg.h  netlink_socket.h  netnative_log_wrapper.h  network.h  network_controller.h  route_controller.h  sock_diag.h  traffic_controller.h
http/services/netmanagernative/net_mgr_native/src/: dnsresolv_cache.cpp  dnsresolv_controller.cpp  dnsresolv_service.cpp  event_reporter.cpp  fwmark_server.cpp  get_addr_info.cpp  interface_controller.cpp  iptables_process.cpp  native_netd_service.cpp  netlink_event.cpp  netlink_handler.cpp  netlink_listener.cpp  netlink_manager.cpp  netlink_msg.cpp  netlink_socket.cpp  network.cpp  network_controller.cpp  route_controller.cpp  sock_diag.cpp  traffic_controller.cpp
http/services/netmanagernative/net_mgr_native/tests/: BUILD.gn  api_time_elapsed.cpp  bit_cast_test.cpp  dns_query.cpp  dnsresolv_client_test.cpp  dnsresolv_client_test.h  error_code_test.cpp  fwmark_client_test.cpp  interface_test.cpp  iptables_restore_test.cpp  main.cpp  main.h  native_netd_service_test.cpp  netd_control_test.cpp  netlink_event_test.cpp  netlink_test.cpp  network_controller_test.cpp  resolv_dns_test.cpp  set_param.cpp  sock_diag_test.cpp  tests.cpp  time_elapsed.h  traffic_test.cpp
http/services/netmanagernative/net_mgr_native/tests/stable/: stability_test.cpp
http/services/netmanagernative/net_mgr_native/tests/unit/: block_queue_unit_test.cpp  dnsresolv_service_unit_test.cpp  event_reporter_unit_test.cpp  get_addr_info_unit_test.cpp  net_utils_unit_test.cpp  netlink_handler_unit_test.cpp  netlink_manager_unit_test.cpp  route_controller_unit_test.cpp  traffic_controller_unit_test.cpp  traffic_init_unit_test.cpp  utils_unit_test.cpp
http/utils/log/src/: netmgr_log_wrapper.cpp
interfaces/innerkits/net_ssl/: BUILD.gn
test/: BUILD.gn
utils/: BUILD.gn
(+172 files in other folders)
