# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

SUBSYSTEM_DIR = "//foundation/communication"
NETMANAGER_ROOT = "$SUBSYSTEM_DIR/netstack/http"
NETMANAGERNATIVE_ROOT = "$NETMANAGER_ROOT/services/netmanagernative"
INNERKITS_ROOT = "$NETMANAGER_ROOT/interfaces/innerkits"
NETCONNMANAGER_INNERKITS_SOURCE_DIR = "$NETMANAGER_ROOT/frameworks/innerkitsimpl/netconnmanager"
NETCONNMANAGER_SOURCE_DIR = "$NETMANAGER_ROOT/services/netconnmanager"
NETCONNMANAGER_COMMON_DIR = "$NETMANAGER_ROOT/services/common"
NETMANAGER_PREBUILTS_DIR = "$NETMANAGER_ROOT/prebuilts"

use_js_debug = false
declare_args() {
  enable_netmgr_debug = false
}
