# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

SUBSYSTEM_DIR = "//foundation/communication"
NETMANAGER_NAPI_ROOT = "$SUBSYSTEM_DIR/netstack/http/frameworks/js/napi/"

ohos_shared_library("http") {
  include_dirs = [
    "//third_party/node/src",
    "//foundation/ace/napi/interfaces/kits",
    "$NETMANAGER_NAPI_ROOT/http/include",
    "//foundation/communication/netstack/http/utils/log/include",
    "//third_party/curl/include"
  ]

  sources = [
    "$NETMANAGER_NAPI_ROOT/http/src/http_napi.cpp",
    "$NETMANAGER_NAPI_ROOT/http/src/http_request.cpp",
    "$NETMANAGER_NAPI_ROOT/http/src/napi_util.cpp",
  ]

  deps = [
    "//foundation/ace/napi/:ace_napi",
    "//utils/native/base:utils",
    "//third_party/curl:curl"
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module/net"
  part_name = "netstack/http"
  subsystem_name = "communication"
}

ohos_shared_library("socket") {
  include_dirs = [
    "//third_party/node/src",
    "//foundation/ace/napi/interfaces/kits",
    "$NETMANAGER_NAPI_ROOT/http/include",
    "$NETMANAGER_NAPI_ROOT/socket/include",
    "//foundation/communication/netstack/http/utils/log/include",
    "//third_party"
  ]

  sources = [
    "$NETMANAGER_NAPI_ROOT/http/src/napi_util.cpp",
    "$NETMANAGER_NAPI_ROOT/socket/src/socket_napi.cpp",
    "$NETMANAGER_NAPI_ROOT/socket/src/udp_socket.cpp",
    "$NETMANAGER_NAPI_ROOT/socket/src/tcp_socket.cpp",
  ]

  deps = [
    "//foundation/ace/napi/:ace_napi",
    "//utils/native/base:utils"
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module/net"
  part_name = "netstack/http"
  subsystem_name = "communication"
}

ohos_shared_library("websocket") {
  include_dirs = [
    "//third_party/node/src",
    "//foundation/ace/napi/interfaces/kits",
    "$NETMANAGER_NAPI_ROOT/http/include",
    "$NETMANAGER_NAPI_ROOT/websocket/include",
    "//foundation/communication/netstack/http/utils/log/include",
  ]

  sources = [
    "$NETMANAGER_NAPI_ROOT/websocket/src/websocket_napi.cpp",
  ]

  deps = [
    "//foundation/ace/napi/:ace_napi",
    "//utils/native/base:utils"
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module/net"
  part_name = "netstack/http"
  subsystem_name = "communication"
}
