# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

SUBSYSTEM_DIR = "//foundation/communication"
NETMANAGER_ROOT = "$SUBSYSTEM_DIR/netstack/http"
NETCONNMANAGER_INNERKITS_ROOT = "$SUBSYSTEM_DIR/netstack/http/interfaces/innerkits"
NETCONNMANAGER_INNERKITS_SOURCE_DIR = "$NETMANAGER_ROOT//frameworks/innerkitsimpl/netconnmanager"
NETCONNMANAGER_SERVICES_SOURCE_DIR = "$NETMANAGER_ROOT//services/netconnmanager"
config("net_conn_manager_if_config") {
  # header file path
  include_dirs = [
    "$NETCONNMANAGER_SERVICES_SOURCE_DIR/include/ipc",
    "$NETCONNMANAGER_INNERKITS_ROOT/native/netconnmanager/include"
  ]

  cflags = []
  if (is_double_framework) {
    cflags = [ "-DCONFIG_DUAL_FRAMEWORK" ]
  }
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  if (is_standard_system) {
    cflags += [ "-DCONFIG_STANDARD_SYSTEM" ]
  }
  if (defined(build_public_version) && build_public_version) {
    cflags += [ "-DBUILD_PUBLIC_VERSION" ]
  }
}

ohos_shared_library("net_conn_manager_if") {
    sources = [
        "$NETCONNMANAGER_INNERKITS_SOURCE_DIR/src/inet_addr.cpp",
        "$NETCONNMANAGER_INNERKITS_SOURCE_DIR/src/net_link_info.cpp",
        "$NETCONNMANAGER_INNERKITS_SOURCE_DIR/src/net_provider_info.cpp",
        "$NETCONNMANAGER_INNERKITS_SOURCE_DIR/src/net_specifier.cpp",
        "$NETCONNMANAGER_INNERKITS_SOURCE_DIR/src/route.cpp",
        "$NETCONNMANAGER_INNERKITS_SOURCE_DIR/src/net_conn_manager.cpp",
        "$NETCONNMANAGER_SERVICES_SOURCE_DIR/src/ipc/net_conn_service_proxy.cpp"
    ]

    include_dirs = [
        "$NETCONNMANAGER_SERVICES_SOURCE_DIR/include/",
    ]

    public_configs = [ ":net_conn_manager_if_config" ]

    deps = [
        "$NETMANAGER_ROOT/utils:net_manager_common",
    ]

    external_deps = [
        "safwk:system_ability_fwk",
        "ipc:ipc_core",
        "samgr_L2:samgr_proxy"
    ]

    defines = [
        "NETMGR_LOG_TAG = \"NetConnManager\"",
        "LOG_DOMAIN = 0xD0015B0",
    ]

    if (is_standard_system) {
        external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
    } else {
        external_deps += [ "hilog:libhilog" ]
    }

    part_name = "netstack"
    subsystem_name = "communication"
}
