# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

SUBSYSTEM_DIR = "//foundation/communication"
NETMANAGER_ROOT = "$SUBSYSTEM_DIR/netstack/http"
INNERKITS_ROOT = "$NETMANAGER_ROOT/interfaces/innerkits"
NETCONNMANAGER_INNERKITS_SOURCE_DIR = "$NETMANAGER_ROOT/frameworks/innerkitsimpl/netconnmanager"
NETCONNMANAGER_SOURCE_DIR = "$NETMANAGER_ROOT/services/netconnmanager"

ohos_executable("net_conn_manager_local_test") {
  sources = [
    "test.cpp",
    "$NETCONNMANAGER_INNERKITS_SOURCE_DIR/src/net_specifier.cpp",
    "$NETCONNMANAGER_INNERKITS_SOURCE_DIR/src/net_provider_info.cpp",
    "$NETCONNMANAGER_INNERKITS_SOURCE_DIR/src/net_link_info.cpp",
    "$NETCONNMANAGER_INNERKITS_SOURCE_DIR/src/inet_addr.cpp",
    "$NETCONNMANAGER_INNERKITS_SOURCE_DIR/src/route.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/ipc/net_conn_service_proxy.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/net_service.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/network.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/net_provider.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/net_controller/telephony_controller.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/net_controller/net_controller_factory.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/net_id_manager.cpp"
  ]

  include_dirs = [
    "$NETCONNMANAGER_SOURCE_DIR/include",
    "$INNERKITS_ROOT/native/netconnmanager/include",
    "$NETCONNMANAGER_SOURCE_DIR/include/ipc",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/include",
    "$NETMANAGER_ROOT/utils/log/include",
    "$NETCONNMANAGER_SOURCE_DIR/include/net_controller",
    "//base/telephony/cellular_data/interfaces/kits/include/",
    "//base/telephony/core_service/interfaces/innerkits/cellular_data/proxy",
    "$NETMANAGER_ROOT/services/netmanagernative/net_mgr_native/include",
    "//foundation/communication/netstack/http/services/netmanagernative/common/include"
  ]

  deps = [
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "$NETMANAGER_ROOT/utils:net_manager_common",
  ]

  external_deps = [
    "safwk:system_ability_fwk",
    "appexecfwk_standard:libeventhandler",
    "samgr_L2:samgr_proxy",
    "ipc:ipc_core",
    "aafwk_standard:want",
    "cellular_data:tel_cellular_data_api"
  ]

  defines = [
    "NETMGR_LOG_TAG = \"NetConnManagerTest\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netstack"
  subsystem_name = "communication"
}
