# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

SUBSYSTEM_DIR = "//foundation/communication"
NETMANAGER_ROOT = "$SUBSYSTEM_DIR/netstack/http"
NETMANAGERNATIVE_ROOT = "$NETMANAGER_ROOT/services/netmanagernative"
INNERKITS_ROOT = "$NETMANAGER_ROOT/interfaces/innerkits"
NETCONNMANAGER_SOURCE_DIR = "$NETMANAGER_ROOT/services/netconnmanager"

ohos_executable("net_manager_native_test") {
  sources = [
    "main.cpp",
    "dns_query.cpp",
    "set_param.cpp",
  ]

  include_dirs = [
        "$NETCONNMANAGER_SOURCE_DIR/include",
        "$NETCONNMANAGER_SOURCE_DIR/include/ipc",
        "$NETCONNMANAGER_SOURCE_DIR/include/net_controller",
        "$INNERKITS_ROOT/native/netconnmanager/include",
        "$NETMANAGERNATIVE_ROOT/net_mgr_native/include",
        "$NETMANAGERNATIVE_ROOT/common/include" ,
        "$NETMANAGERNATIVE_ROOT/net_mgr_native/client/include",
        "$NETMANAGERNATIVE_ROOT/net_mgr_native/tests/include",
        "//foundation/communication/netstack/http/services/netmanagernative/common/include"
  ]

  deps = [
        "$NETMANAGER_ROOT/utils:net_manager_common",
        "$INNERKITS_ROOT/native/netconnmanager:net_conn_manager_if",
        "//utils/native/base:utils",
        "$NETMANAGER_ROOT/services/netmanagernative:net_manager_native"
  ]

  external_deps = [
    "safwk:system_ability_fwk",
    "appexecfwk_standard:libeventhandler",
    "samgr_L2:samgr_proxy",
    "ipc:ipc_core",
    "aafwk_standard:want",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"NetManagerNative\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netstack"
  subsystem_name = "communication"
}


